src/test/compile-fail/trait-keyword.rs
iface foo { } //~ ERROR iface

fn main() {}